# implexa

./: .clinerules-architect  .clinerules-code  .gitignore  .roomodes  Cargo.toml  README.md  index.html  package-lock.json  package.json  projectBrief.md  tailwind.config.js  tauri.conf.json  tsconfig.json  vite.config.ts
doc/: ci-cd-setup.md  development-environment-setup.md
icons/: icon.icns
memory-bank/: activeContext.md  coding-standards.md  crate-structure-architecture.md  crate-structure-issue.md  crate-structure-refactor.md  database-connection-refactoring-guide.md  database-initialization-fixes.md  database-schema-design.md  decisionLog-related-files.md  decisionLog.md  directory-structure.md  dual-crate-structure-fix.md  git-backend-architecture.md  implexa-architecture-diagram.md  implexa-project-requirement-doc.md  memory-bank-index.md  memory-bank-navigation-plan.md  part-management-workflow.md  productContext.md  progress.md  rust-module-refactoring-guide.md  sqlite-thread-safety-approaches.md  sqlite-thread-safety-implementation.md  tauri-2.x-migration-guide.md  unit-testing-approach.md  user-interface-architecture.md
memory-bank/archive/: connection-pool-implementation-guide.md  thread-safety-issues.md
proj/: github-actions-cicd.md  human-notes.md  implexa-phase1-implementation-plan.md  implexa-prd.md  implexa-project-requirement-doc.md  name.md
src/: approval_commands.rs  commands.rs  file_commands.rs  git_backend.rs  lib.rs  main.rs  main.tsx  manufacturer_part_commands.rs  part_commands.rs  property_commands.rs  relationship_commands.rs  revision_commands.rs  styles.css  workflow_commands.rs  workspace_commands.rs
src/commands/: approval.rs  file.rs  manufacturer_part.rs  mod.rs  parts.rs  relationship.rs  repository.rs  revision.rs  workflow.rs  workspace.rs
src/database/: approval.rs  category.rs  connection_manager.rs  file.rs  manufacturer_part.rs  mod.rs  (+7 more)
(+34 files in other folders)
