[package]
name = "implexa"
version = "0.1.0"
edition = "2024"
description = "A hardware-focused PLM/PDM solution that leverages Git for version control"
authors = ["Implexa Team"]
license = "MIT"

[dependencies]
# Git operations
git2 = "0.18.1"
# Async runtime
tokio = { version = "1.35.1", features = ["full"] }
# Error handling
thiserror = "1.0.56"
anyhow = "1.0.79"
# Logging
log = "0.4.20"
env_logger = "0.10.1"
# SQLite database
rusqlite = { version = "0.30.0", features = ["bundled"] }
# Serialization/Deserialization
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
# Path manipulation
path-clean = "1.0.1"
